Create app for placement stats; Table + Graph
- Minor fixes

--- a/ipu/static/account/css/base_home_layout.css
+++ b/ipu/static/account/css/base_home_layout.css
@@ -807,3 +807,11 @@ form h5 {
   display: none;
 }
 }
+
+.required > label:after {
+	content: ' (*)' !important;
+	color: #337ab7 !important;
+	top: 0px !important;
+	opacity: 1 !important;
+	display: inline !important;
+}
