--- a/ipu/templates/404.html
+++ b/ipu/templates/404.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <title>400</title>
-  <link type="text/css" rel="stylesheet" href="../static/error.css" />
+  <link type="text/css" rel="stylesheet" href="{% static 'error.css' %}" />
 </head>
 
 
