--- a/ipu/templates/account/base_home_layout.html
+++ b/ipu/templates/account/base_home_layout.html
@@ -57,7 +57,7 @@
 
 }
 
-#noti-div h3,h4,h5
+#noti-div h3, #noti-div h4, #noti-div h5
 {
    font-size: 14px;
 }
@@ -183,7 +183,7 @@
                   -->
                   <!--New notifications button-->
                   <li class="hide-on-med-and-down">
-                    <a href="#" data-activates="slide-out2" class="button-collapse2"><i class="fa fa-bell fa-2x" style="font-size: 1.5em;"></i></a>
+                    <a href="#" id="notification_button" data-activates="slide-out2" class="button-collapse2"><i class="fa fa-bell fa-2x" style="font-size: 1.5em;"></i></a>
                   </li>
 
                   <li class="hide-on-med-and-down">
