--- a/ipu/static/account/auth.css
+++ b/ipu/static/account/auth.css
@@ -43,6 +43,7 @@ main img
   font-size: 20px;
   position: relative;
   top: -50px;
+  font-family: "Helvetica";
 }
 
 #form-box
@@ -172,20 +173,24 @@ main img
     }
 .white_content {
       display: none;
+      position: absolute;
+      top: 18%;
+      left: 12%;
+/*
       justify-content: center;
       align-items: center;
-      position: absolute;
       top: 5%;
       left: 15%;
       width: 70%;
       height: 90%;
       padding: 10px;
+      border-radius: 2%;
+	*/
       border: 1px solid white;
       background-color: white;
       z-index:1002;
       overflow: auto;
       color: black;
-      border-radius: 2%;
     }
 .white_content #cross
     {
@@ -208,8 +213,11 @@ main img
     }
 
 .required > label:after {
-	content: '* ' !important;
-	font-weight: bold !important;
+	content: ' (*)' !important;
+	color: #337ab7 !important;
+	top: 0px !important;
+	opacity: 1 !important;
+	display: inline !important;
 }
 
 .help-block {
@@ -261,6 +269,7 @@ main img
 {
   color: white;
   font-size: 60px;
+  font-family: "Helvetica";
 }
 
 #form-box
@@ -457,20 +466,24 @@ main img
     }
 .white_content {
       display: none;
+      position: absolute;
+      top: 15%;
+      left: 0%;
+/*
       justify-content: center;
       align-items: center;
-      position: absolute;
       top: 18%;
       left: 10%;
       width: 80%;
       height: 64%;
       padding: 10px;
+      border-radius: 2%;
+*/
       border: 1px solid white;
       background-color: white;
       z-index:1002;
       overflow: auto;
       color: black;
-      border-radius: 2%;
     }
 .white_content #cross
     {
@@ -496,8 +509,11 @@ main img
     } 
 
 .required > label:after {
-	content: '* ' !important;
-	font-weight: bold !important;
+	content: ' (*)' !important;
+	color: #337ab7 !important;
+	top: 0px !important;
+	opacity: 1 !important;
+	display: inline !important;
 }
 
 .help-block {
@@ -551,6 +567,7 @@ main img
   font-size: 35px;
   position: relative;
   top: 0px;
+  font-family: "Helvetica";
 }
 
 #form-box
@@ -680,20 +697,24 @@ main img
     }
 .white_content {
       display: none;
+      position: absolute;
+      top: 13%;
+      left: 26%;
+	/*
       justify-content: center;
       align-items: center;
-      position: absolute;
       top: 5%;
       left: 20%;
       width: 60%;
       height: 90%;
       padding: 10px;
+      border-radius: 2%;
+	 */
       border: 1px solid white;
       background-color: white;
       z-index:1002;
       overflow: auto;
       color: black;
-      border-radius: 2%;
     }
 .white_content #cross
     {
@@ -711,8 +732,11 @@ main img
     }
 
 .required > label:after {
-	content: '* ' !important;
-	font-weight: bold !important;
+	content: ' (*)' !important;
+	color: #337ab7 !important;
+	top: 0px !important;
+	opacity: 1 !important;
+	display: inline !important;
 }
 
 .help-block {
