--- a/ipu/templates/faculty/manage_faculty.html
+++ b/ipu/templates/faculty/manage_faculty.html
@@ -94,7 +94,11 @@
 					<img src="" alt="Profile Picture" class="circle" style="background-color:{% cycle '#02b3e4' '#1c262f'%}" />
 				{% endif %}
 				<p>
-					<b>Name: </b>{% if f.faculty.firstname %} <span class="title">{{ f.faculty.get_full_name }}</span>{% else %}<small>User has not created his/her profile yet.</small>{% endif %}<br>
+					{% if f.faculty.firstname %}
+					<b>Name: </b> <span class="title">{{ f.faculty.get_full_name }}</span><br>
+					{% else %}
+						<small>User has not created his/her profile yet.</small><br>
+					{% endif %}
 					<b>Username: </b><span class="title">&lt;{{ f.faculty.profile.username }}&gt;</span><br>
 					<b>Email: </b>{{ f.faculty.profile.email }}<br>
 					<b>Permissions: </b>{% for group in f.faculty.profile.groups.all %}{{ group }}, {% endfor %}
