--- a/ipu/templates/404.html
+++ b/ipu/templates/404.html
@@ -111,7 +111,7 @@
   }
 
   .button {
-    background-color: #1344a0; /* Green */
+    background-color: #3b87c8; /* Green */
     border: none;
     color: white;
     padding: 15px 32px;
