Add Robots Meta Tags

--- a/ipu/templates/account/base_home_layout.html
+++ b/ipu/templates/account/base_home_layout.html
@@ -8,6 +8,7 @@
             <link type="text/css" rel="stylesheet" href="{% static 'materialize-blue.css' %}" />
             <link type="text/css" rel="stylesheet" href="{% static 'account/css/base_home_layout.css'%}"  media="screen,projection"/>
             <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+			<meta name="robots" content="noindex," "nocache," "noimageindex," "noarchive," "nosnippet," "nofollow" />
             {% block head %}{% endblock %}
     </head>
 
