--- a/ipu/templates/account/base.html
+++ b/ipu/templates/account/base.html
@@ -14,8 +14,15 @@
 		<link rel="manifest" href="/favicon/manifest.json">
 		<link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#0071b0">
 		<link rel="shortcut icon" href="/favicon/favicon.ico">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="msapplication-config" content="/favicon/browserconfig.xml">
 		<meta name="theme-color" content="#ffffff">
+		{% if request.user.is_authenticated %}
+			<meta name="robots" content="noindex," "nocache," "noimageindex," "noarchive," "nosnippet," "nofollow" />
+		{% else %}
+			<!-- SEO Tags Here -->
+			<meta name="robots" content="index," "noimageindex," "follow" />
+		{% endif %}
 		{% include 'material/includes/material_css.html' %}
 		{% block head %}{% endblock head %}
 	</head>
