--- a/ipu/templates/account/navbar_with_tabs.html
+++ b/ipu/templates/account/navbar_with_tabs.html
@@ -8,6 +8,12 @@
             <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
             <link type="text/css" rel="stylesheet" href="{% static 'materialize-blue.css' %}" />
             <link type="text/css" rel="stylesheet" href="{% static 'account/css/base_home_layout.css'%}"  media="screen,projection"/>
+			{% if request.user.is_authenticated %}
+				<meta name="robots" content="noindex," "nocache," "noimageindex," "noarchive," "nosnippet," "nofollow" />
+			{% else %}
+				<!-- SEO Tags Here -->
+				<meta name="robots" content="index," "noimageindex," "follow" />
+			{% endif %}
             <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
             {% block head %}{% endblock %}
     </head>
