--- a/ipu/templates/college/create.html
+++ b/ipu/templates/college/create.html
@@ -2,20 +2,19 @@
 {% load material_form %}
 {% block title %} College | Sign Up {% endblock title %}
 {% block content %}
+	<a class="btn waves-effect waves-light blue" href="{% url 'logout' %}" style="position: fixed;top: 10px;right: 10px;z-index: 516516514;">Logout</a>
     <form enctype="multipart/form-data" action="{% url 'create_college' %}" method='POST' id='college-creation-form' >
         {% csrf_token %}
 		<div class="row">
-			<div class="col s6 m12">
-				<h4> Create Profile </h4>
+			<div class="col s10 m8 offset-s1 offset-m2">
+				<h4 class="center" style="color: goldenrod"> Create Profile </h4>
 				<div>
 	 		     	{% form form=college_creation_form %}{% endform %}
 				 </div>
 			</div>
 		</div>
 		<div class="row">
-			<div class="col s6 m12">
-		        <button type="submit" name="createcollege" class="btn waves-effect waves-light">Finish<i class="material-icons right">send</i></button>
-			</div>
+			<button type="submit" name="createcollege" class="btn waves-effect waves-light col s10 m8 offset-s1 offset-m2">Finish<i class="material-icons right">send</i></button>
 		</div>
     </form>
 	<br />
