--- a/ipu/templates/stats/stats.html
+++ b/ipu/templates/stats/stats.html
@@ -2,11 +2,27 @@
 {% load staticfiles %}
 {% load material_form %}
 
+{% block title %}Placement statistics – Guru Gobind Singh Indraprastha University | Placement stats IP university | Placement statistics Indraprastha University | Placement record IP univeristy | Placements at IP university | Placement record of IPU | Placement  percentage of IPU | Training and placement cell - Guru Gobind Singh Indraprastha University{% endblock %}
+
 {% block head %}
   <link type="text/css" rel="stylesheet" href="{% static 'common/css/font-awesome/css/font-awesome.min.css' %}" />
   <link type="text/css" rel="stylesheet" href="{% static 'materialize-blue.css' %}" />
   <link type="text/css" rel="stylesheet" href="{% static 'account/css/stats.css' %}" />
 <link rel="stylesheet" type="text/css" href="{% static 'sweetalert/dist/sweetalert.css' %}">
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<meta name="keywords" content="Placement statistics Guru Gobind Singh Indraprastha University, Placement stats IP university, Placement statistics Indraprastha University, Placement record IP univeristy, Placements at IP university, Placement record of IPU, Placement  percentage of IPU, Training and placement cell Guru Gobind Singh Indraprastha University"> 
+
+<meta name="description" content="Placement statistics of Guru Gobind Singh Indraprastha University | Placement record at IPU | Placement statistics Indraprastha University | Placement record IP univeristy | Placements at IP university">
+
+<meta name="twitter:title" content= "Placement statistics – Guru Gobind Singh Indraprastha University | Placement stats IP university | Placement statistics Indraprastha University | Placement record IP univeristy | Placements at IP university | Placement record of IPU" />
+
+<meta name="twitter:description" content="Placement statistics of Guru Gobind Singh Indraprastha University | Placement record at IPU | Placement statistics Indraprastha University | Placement record IP univeristy | Placements at IP university" />
+
+<meta property="og:title" content="Placement statistics – Guru Gobind Singh Indraprastha University | Placement stats IP university | Placement statistics Indraprastha University | Placement record IP univeristy | Placements at IP university | Placement record of IPU | Placement  percentage of IPU | Training and placement cell - Guru Gobind Singh Indraprastha University" />
+
+<meta property="og:description" content="Placement statistics of Guru Gobind Singh Indraprastha University | Placement record at IPU | Placement statistics Indraprastha University | Placement record IP univeristy | Placements at IP university" />
+<meta property="og:url" content= "https://placements.ggsipu.ac.in/stats/" />
 {% endblock %}
 
 
