--- a/ipu/templates/account/landing.html
+++ b/ipu/templates/account/landing.html
@@ -7,6 +7,7 @@
 	<link type="text/css" rel="stylesheet" href="{% static 'common/css/font-awesome/css/font-awesome.min.css' %}" />
 	<link type="text/css" rel="stylesheet" href="{% static 'materialize-blue.css' %}" />
 	<link type="text/css" rel="stylesheet" href="{% static 'account/css/landing.css' %}" />
+ 
 
 	<!--SEO work meta tags-->
 	<meta name="keywords" content="Training and placement cell Guru Gobind Singh Indraprastha University, GGSIPU placements, IPU placements, IP university placements, Indraprastha University delhi placements, Indraprastha university placements, tnp cell ipu, tnp ip univeristy, placements at ipu, placements at indraprastha univeristy delhi, placement record at ipu, placement percentage at ipu, placement record at ggsipu"> 
@@ -43,8 +44,9 @@
         </a>
       <ul id="nav-mobile" class="right">
         <li><a href="{% url 'intro' %}">Why GGSIPU</a></li>
-        <li><a href="{% url 'team' %}">Meet The Team</a></li>
+        <li><a href="{% url 'procedure' %}">Procedure</a></li>
         <li><a href="{% url 'stats' %}">Placement Stats</a></li>
+        <li><a href="{% url 'team' %}">Meet The Team</a></li>
       </ul>
       </div>
 
@@ -62,8 +64,9 @@
       </a>
       <ul id="mobile-links">
         <li><a href="{% url 'intro' %}">Why GGSIPU</a></li>
-        <li><a href="{% url 'team' %}">Meet The Team</a></li>
+        <li><a href="{% url 'procedure' %}">Procedure</a></li>
         <li><a href="{% url 'stats' %}">Placement Stats</a></li>
+        <li><a href="{% url 'team' %}">Meet The Team</a></li>
       </ul>
     </div>
   </nav>
