--- a/ipu/templates/account/team.html
+++ b/ipu/templates/account/team.html
@@ -7,6 +7,7 @@
   <link type="text/css" rel="stylesheet" href="{% static 'common/css/font-awesome/css/font-awesome.min.css' %}" />
   <link type="text/css" rel="stylesheet" href="{% static 'materialize-blue.css' %}" />
   <link type="text/css" rel="stylesheet" href="{% static 'account/css/team.css' %}" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
   <!--SEO work meta tags-->
     <meta name="keywords" content="Meet the team Training and placement cell Guru Gobind Singh Indraprastha Univeristy, Meet the team of tnp portal at IP univerisity, Pratulya Bubna, Rajneesh Sharma, Shivam Sharma, IP  University web development team"> 
@@ -26,54 +27,57 @@
 {% endblock %}
 
 {% block main %}
-  <div id="main-box">
-   <h3>Meet the Team</h3>
-   
-   <div id="main-inside">
-  
-   <div class="box">
-     <div class="pic z-depth-3"><img src="{% static 'account/images/team/bob.jpg' %}"></div>
-     <div class="info">
-       
-       <h4>Pratulya Bubna</h4>
-       <h5>USICT</h5>
-       <div class="icons">
-       <i class="fa fa-google-plus-square fa-2x" aria-hidden="true"></i>
-       <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i>
-         <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>
-         </div>
-    </div>
-   </div>
-     
+  <div id="team" class="section scrollspy">
+        <div class="row">
+         <div class="col s12 m4 offset-m4 center-on-small-only">
+          <h2 class="header">Meet the Team</h2>
+          </div>
+        </div>  
 
-   <div class="box">
-     <div class="pic z-depth-3"><img src="{% static 'account/images/team/shivam.jpg' %}"></div>
-     <div class="info">
-      <h4>Shivam Sharma</h4>
-       <h5>USICT</h5>
-       <div class="icons">
-       <i class="fa fa-google-plus-square fa-2x" aria-hidden="true"></i>
-       <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i>
-         <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>
-         </div>
-     </div>
-   </div>
+        <div class="row">
+          <div class="col s12 m2 offset-m2 center-on-small-only ">
+            <div class="image-container"> 
+              <img src="{% static 'account/images/team/bob.jpg' %}" class="circle responsive-img" height="160px" width="160px">
+            </div>
+          </div>
+          <div class="col s12 m6">
+              <h4>Pratulya Bubna</h4>
+              <p>Alvin is an Information Systems and Human Computer Interaction Major. He worked as a Software Engineer at Fidelity Investments this past summer.</p>
+              <a><i class="fa fa-google-plus-square fa-2x gmail-icon" aria-hidden="true"></i></a>
+              <a><i class="fa fa-facebook-square fa-2x icons fb-icon" aria-hidden="true"></i></a>
+              <a><i class="fa fa-linkedin-square fa-2x icons linkedin-icon" aria-hidden="true"></i></a>
+          </div>
+          
+        </div>
 
+        <div class="row">
+          <div class="col s12 m2 offset-m2 center-on-small-only">
+            <div class="image-container">
+              <img src="{% static 'account/images/team/rajjo.jpg' %}" class="circle responsive-img" height="160px" width="160px">
+              </div>
+          </div>
+          <div class="col s12 m6">
+            <h4>Rajneesh Sharma</h4>
+            <p>Alan is an Information Systems major with a minor in computer science. He worked at as a Front End Developer at Shift Collaborative this past summer.</p>
+              <a><i class="fa fa-google-plus-square fa-2x gmail-icon" aria-hidden="true"></i></a>
+              <a><i class="fa fa-facebook-square fa-2x icons fb-icon" aria-hidden="true"></i></a>
+              <a><i class="fa fa-linkedin-square fa-2x icons linkedin-icon" aria-hidden="true"></i></a>
+          </div>
+        </div>
 
-   <div class="box">
-     <div class="pic z-depth-3"><img src="{% static 'account/images/team/rajjo.jpg' %}"></div>
-     <div class="info">
-      <h4>Rajneesh Sharma</h4>
-       <h5>USICT</h5>
-       <div class="icons">
-       <i class="fa fa-google-plus-square fa-2x" aria-hidden="true"></i>
-       <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i>
-         <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>
-         </div>
-     </div>
-   </div>
-     
-      
-  </div>
-  </div>
+        <div class="row">
+          <div class="col s12 m2 offset-m2 center-on-small-only">
+            <div class="image-container">
+            <img src="{% static 'account/images/team/shivam.jpg' %}" class="circle responsive-img" height="160px" width="160px">
+              </div>
+          </div>
+          <div class="col s12 m6">
+            <h4>Shivam Sharma</h4>
+            <p>Alex is an Information Systems major with a minor in Human Computer Interaction. He worked as a software developer for Intuit this past summer.</p>
+              <a><i class="fa fa-google-plus-square fa-2x gmail-icon" aria-hidden="true"></i></a>
+              <a><i class="fa fa-facebook-square fa-2x icons fb-icon" aria-hidden="true"></i></a>
+              <a><i class="fa fa-linkedin-square fa-2x icons linkedin-icon" aria-hidden="true"></i></a>
+          </div>
+        </div>
+   </div>   
 {% endblock %}
