--- a/ipu/static/account/auth.css
+++ b/ipu/static/account/auth.css
@@ -30,19 +30,15 @@ main
 }
 main img
 {
-  margin-bottom: 0px;
-  position: relative;
-  top: -40px;
   height: 80px;
   width: 95px;
+  margin-bottom: 1px;
 }
 
 #heading
 {
   color: white;
-  font-size: 20px;
-  position: relative;
-  top: -50px;
+  font-size: 22px;
 }
 
 #form-box
@@ -51,12 +47,10 @@ main img
   display: flex;
   flex-direction: column;
   transition: box-shadow .25s;
-  height: 310px;
+  height: 280px;
   border-radius: 7px;
-  width: 40%;
+  width: 90%;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-  position: relative;
-  top: -60px;
 }
 
 #student-signup-mainbox
@@ -86,6 +80,12 @@ main img
 
 .tabs .tab a {
     color: #26a69a;
+    font-size: 12px;
+}
+
+.tabs
+{
+  height: 40px;
 }
 
 .tabs .indicator {
@@ -176,8 +176,8 @@ main img
       align-items: center;
       position: absolute;
       top: 5%;
-      left: 15%;
-      width: 70%;
+      left: 5%;
+      width: 90%;
       height: 90%;
       padding: 10px;
       border: 1px solid white;
@@ -198,6 +198,7 @@ main img
     .white_content h4
     {
       color: #337ab7;
+      margin-top: 15px;
     }
 
     #back
@@ -232,7 +233,9 @@ main img
 body {
     min-height: 100%;
     background: rgba(0, 0, 0, 0.7);
-    padding: 30px;
+    padding: 10px;
+    padding-left:5px;
+    padding-right:5px;
     padding-bottom: 0px;
 }
 
@@ -244,23 +247,23 @@ body {
 main
 {
     align-items: center;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
     padding: 10px;
-    margin-top: 200px;
+    margin-top: 50px;
 }
 main img
 {
   margin-bottom: 0px;
-  height: 190px;
-  width: 215px;
+  height: 80px;
+  width: 95px;
 }
 
 #heading
 {
   color: white;
-  font-size: 60px;
+  font-size: 30px;
 }
 
 #form-box
@@ -269,9 +272,9 @@ main img
   display: flex;
   flex-direction: column;
   transition: box-shadow .25s;
-  height: 600px;
+  height: 300px;
   border-radius: 7px;
-  width: 79%;
+  width: 95%;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 
 }
@@ -309,19 +312,19 @@ main img
 
 .tabs
 {
-  height: 60px;
+  height: 45px;
 }
 
 
 .tabs .tab a {
     color: #26a69a;
-    font-size: 30px;
+    font-size: 12px;
 }
 
 #form-box .input-field label.active {
-    font-size: 1.8rem;
+    font-size: .9rem;
     transform: translateY(-140%);
-    margin-top: 10px;
+    margin-top: 2px;
 }
 
 .tabs .indicator {
@@ -335,47 +338,52 @@ main img
 {
   box-shadow: none;
   margin: 0;
-  font-size: 15px;
+  font-size: 12px;
   padding-bottom: 0px;  
+  padding-left: 2px;
+  padding-top: 2px;
+  padding-right: 2px;
 
    
 }
 
 #student-login-div form .row
 {
-   margin-bottom: 10px;
-   margin-top: 10px;
+   margin-bottom: 1px;
+   margin-top: 5px;
    padding: 5px;
+   padding-left: 0px;
+   padding-right: 0px;
 }
 
 #login-div form .row
 {
-   margin-bottom: 10px;
-   margin-top: 10px;
-   padding: 5px;
+   margin-bottom: 2px;
+   margin-top: 2px;
+   padding: 2px;
 }
 
 
 #test1 .row
 {
-  height: 150px;
-  font-size: 20px;
+  height: 50px;
+  font-size: 12px;
 }
 
 #test1 .col
 {
-  font-size: 20px;
+  font-size: 12px;
 }
 
 #test2 .row
 {
-  height: 150px;
-  font-size: 20px;
+  height: 50px;
+  font-size: 12px;
 }
 
 #test2 .col
 {
-  font-size: 20px;
+  font-size: 12px;
 }
 
 #corner-buttons {
@@ -395,7 +403,7 @@ main img
     top: 1em;
     right: 1em;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     left: 5%;
     width: 90%;
     
@@ -405,7 +413,7 @@ main img
     margin: 5px;
     width: 380px;
     height: 60px;
-    font-size: 25px;
+    font-size: 1px;
     line-height: 30px;
     display: flex;
     justify-content: center;
@@ -415,9 +423,11 @@ main img
 
 #corner-buttons-small a{
     margin: 5px;
-    font-size: 50px;
-    line-height: 50px;
+    font-size: 10px;
+    width: 100px;
+    line-height: 10px;
     display: flex;
+    padding: 2px;
     justify-content: center;
     align-items: center;
     
@@ -427,20 +437,19 @@ main img
 {
   width: 100%;
   font-weight: bold;
-  height: 75px;
-  font-size: 35px;
+  height: 25px;
+  font-size: 12px;
+  line-height: 12px;
 }
 
 #login-btn
 {
   width: 100%;
   font-weight: bold;
-  height: 75px;
-  font-size: 35px;
+  height: 25px;
+  font-size: 12px;
+  line-height: 12px;
 }
-
-
-
 
 
 .black_overlay{
@@ -460,11 +469,11 @@ main img
       justify-content: center;
       align-items: center;
       position: absolute;
-      top: 18%;
-      left: 10%;
-      width: 80%;
-      height: 64%;
-      padding: 10px;
+      top: 4%;
+      left: 5%;
+      width: 90%;
+      height: 92%;
+      padding: 5px;
       border: 1px solid white;
       background-color: white;
       z-index:1002;
@@ -475,14 +484,16 @@ main img
 .white_content #cross
     {
         position: absolute;
-        right: 10px;
-        top: 10px;
+        right: 5px;
+        top: 5px;
         color: black;
     }
 
     .white_content h4
     {
       color: #337ab7;
+      margin-top: 20px;
+      margin-bottom: 3px;
     }
 
 
@@ -503,6 +514,23 @@ main img
 .help-block {
     font-size: 0.80rem;
 }
+
+input[type="text"], input[type="password"], input[type="email"], input[type="url"], input[type="time"], input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="tel"], input[type="number"], input[type="search"], textarea.materialize-textarea {
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid #9e9e9e;
+    border-radius: 0;
+    outline: none;
+    height: 3rem;
+    width: 100%;
+    font-size: .8rem;
+    margin: 0 0 15px 0;
+    padding: 0;
+    box-shadow: none;
+    box-sizing: content-box;
+    transition: all 0.3s;
+}
+
 
 }
 
