--- a/ipu/templates/404.html
+++ b/ipu/templates/404.html
@@ -137,7 +137,11 @@
   <div id="center-inner-box">
     <h2>404</h2>
     <p>Sorry but the page you are looking for cannot be found.</p>
-    <a href="" class="button">HOMEPAGE</a>
+    {% if request.user.is_authenticated %}
+		<a href="{{ request.user.get_home_url }}" class="button">Homepage</a>
+		{% else %}
+		<a href="{% url ‘landing’ %}" class="button">Back to site</a>
+	{% endif %}
   </div>
 
 </div>
