--- a/ipu/templates/405.html
+++ b/ipu/templates/405.html
@@ -137,7 +137,11 @@
   <div id="center-inner-box">
     <h2>405</h2>
     <p>You are attempting to access the server via a prohibited method.</p>
-    <a href="" class="button">HOMEPAGE</a>
+    {% if request.user.is_authenticated %}
+		<a href="{{ request.user.get_home_url }}" class="button">Homepage</a>
+		{% else %}
+		<a href="{% url ‘landing’ %}" class="button">Back to site</a>
+	{% endif %}
   </div>
 
 </div>
