--- a/ipu/templates/account/nav-landing.html
+++ b/ipu/templates/account/nav-landing.html
@@ -6,13 +6,14 @@
 
 {% block head %}
 	<link type="text/css" rel="stylesheet" href="{% static 'materialize-blue.css' %}" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 {% endblock %}
 
 {% block header %}
 <style type="text/css">
   nav
 {
-  height: 64px;
+    height: 64px;
     padding-top: 2px;
     background-color: #1a237e !important;
     padding-left: 5px;
@@ -47,6 +48,12 @@
   text-transform: capitalize;
 }
 
+#logo img
+{
+  height: 55px;
+  width: auto;
+}
+
 #inner-logo h6
 {
   
@@ -62,20 +69,202 @@
   cursor: pointer;
 }
 
+#left-i
+{
+  margin-left: 1.5%;
+}
+
+
 nav .brand-logo { 
     font-family: "Times New Roman"; /* New */
     text-transform: capitalize; /* New */
   font-size: 1.6rem;
 }
 
+@media (min-width:300px) and (orientation: portrait){
+
+nav
+{
+    height: 60px;
+    padding-top: 2px;
+    background-color: #1a237e !important;
+    padding-left: 1px;
+}
+#corner-button
+{
+    position: fixed;
+    line-height: 25px;
+    font-size: 10px;
+    padding: 2px;
+    top: 5px;
+    right: 2px;
+    width: 100px;
+    height: 25px;
+    z-index: 50285154165;
+}
+
+nav i.material-icons {
+    display: block;
+    font-size: 20px;
+    height: 45px;
+    line-height: 45px;
+}
+
+.material-icons {
+    font-family: 'Material Icons';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 20px;
+    display: inline-block;
+    width: .8em;
+}
+#logo
+{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+#logo img
+{
+  height: 30px;
+  width: 38px;
+}
+
+
+#inner-logo h4
+{
+  font-size: 12px;
+  margin-bottom: 1px;
+  font-family: "Times New Roman";
+  text-transform: capitalize;
+}
+
+#left-i
+{
+  margin-left: 2px;
+}
+
+#inner-logo h6
+{
+  
+  font-size: 10px;
+  margin-top: 1px;
+  font-family: "Times New Roman";
+  text-transform: capitalize;
+}
+
+
+#brand-corner:hover
+{
+  cursor: pointer;
+}
+
+nav .brand-logo { 
+    font-family: "Times New Roman"; /* New */
+    text-transform: capitalize; /* New */
+  font-size: 1rem;
+  left: 45%;
+}
+
+  }
+
+  @media (min-width:300px) and (orientation: landscape){
+
+nav
+{
+    height: 60px;
+    padding-top: 2px;
+    background-color: #1a237e !important;
+    padding-left: 1px;
+}
+#corner-button
+{
+    position: fixed;
+    line-height: 30px;
+    font-size: 12px;
+    padding: 2px;
+    top: 10px;
+    right: 2px;
+    width: 130px;
+    height: 30px;
+    z-index: 50285154165;
+}
+
+nav i.material-icons {
+    display: block;
+    font-size: 20px;
+    height: 45px;
+    line-height: 45px;
+}
+
+.material-icons {
+    font-family: 'Material Icons';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 20px;
+    display: inline-block;
+    width: .8em;
+}
+#logo
+{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+#logo img
+{
+  height: 30px;
+  width: 38px;
+}
+
+
+#inner-logo h4
+{
+  font-size: 12px;
+  margin-bottom: 1px;
+  font-family: "Times New Roman";
+  text-transform: capitalize;
+}
+
+#left-i
+{
+  margin-left: 2px;
+}
+
+#inner-logo h6
+{
+  
+  font-size: 10px;
+  margin-top: 1px;
+  font-family: "Times New Roman";
+  text-transform: capitalize;
+}
+
+
+#brand-corner:hover
+{
+  cursor: pointer;
+}
+
+nav .brand-logo { 
+    font-family: "Times New Roman"; /* New */
+    text-transform: capitalize; /* New */
+  font-size: 1rem;
+  left: 45%;
+}
+
+  }
+
 </style>
 <div class="navbar-fixed">
     <nav>
       <div class="nav-wrapper">
-        <a class="brand-logo" id="brand-corner">
-                    <div class="left" style="margin-left: 1.5%;">
+        <a href="{% url 'landing' %}" class="brand-logo" id="brand-corner">
+                    <div class="left" id="left-i">
                       <div id="logo">
-                        <img src="{% static 'images/ipu-logo.png' %}" style="height: 55px">
+                        <img src="{% static 'images/ipu-logo.png' %}">
                         <div id="inner-logo">
                         <h4>Training & Placement cell</h4>
                         <h6>Guru Gobind Singh Indraprastha University</h6> 
@@ -84,10 +273,10 @@ nav .brand-logo {
                     </div>
         </a>
         <ul class="left">
-          <li class="hide-on-med-and-down"><a style="line-height: 64px;height: 64px;" href="{% url 'landing' %}"><i class="material-icons">arrow_back</i>
+          <li class="hide-on-med-and-down"><a href="{% url 'landing' %}"><i class="material-icons">arrow_back</i>
             </a>
           </li>
-          <li class="hide-on-large-only"><a style="line-height: 64px;height: 64px;" href="{% url 'landing' %}"><i class="material-icons">arrow_back</i>
+          <li class="hide-on-large-only"><a href="{% url 'landing' %}"><i class="material-icons">arrow_back</i>
             </a>
           </li>
         </ul>
