Pages are rife with sweet alerts! :)
- Add preloader, wherever required
- Add password constraints to Signup + Account Settings forms
- Change UI/UX of "Association Requests" tab
- Add troublemaker constraint on company (Sending Association Requests)
- Add created_on, updated_on fields to relevant fields of dummy_company and recruitment
- Add fab, notification slider, notification button to templates/account/navbar_with_tabs.html
- Default fab to be opened
- Remove the irksome swal that popped on loading the student's homepage

--- a/ipu/static/account/auth.css
+++ b/ipu/static/account/auth.css
@@ -212,14 +212,6 @@ main img
       left: 10px;
     }
 
-.required > label:after {
-	content: ' (*)' !important;
-	color: #337ab7 !important;
-	top: 0px !important;
-	opacity: 1 !important;
-	display: inline !important;
-}
-
 .help-block {
     font-size: 0.80rem;
 }
@@ -508,14 +500,6 @@ main img
       width: 50px;
     } 
 
-.required > label:after {
-	content: ' (*)' !important;
-	color: #337ab7 !important;
-	top: 0px !important;
-	opacity: 1 !important;
-	display: inline !important;
-}
-
 .help-block {
     font-size: 0.80rem;
 }
@@ -731,6 +715,12 @@ main img
       left: 20px;
     }
 
+.help-block {
+    font-size: 0.80rem;
+}
+
+}
+
 .required > label:after {
 	content: ' (*)' !important;
 	color: #337ab7 !important;
@@ -739,8 +729,6 @@ main img
 	display: inline !important;
 }
 
-.help-block {
-    font-size: 0.80rem;
-}
-
+.required > [type="checkbox"] + label:after {
+	content: '' !important;
 }
