--- a/ipu/static/account/css/base_home_layout.css
+++ b/ipu/static/account/css/base_home_layout.css
@@ -815,3 +815,7 @@ form h5 {
 	opacity: 1 !important;
 	display: inline !important;
 }
+
+.required > [type="checkbox"] + label:after {
+	content: '' !important;
+}
