--- a/ipu/templates/account/forgot_password_email_body_html.html
+++ b/ipu/templates/account/forgot_password_email_body_html.html
@@ -10,7 +10,9 @@ If clicking the link above doesn't work, please copy and paste the URL in a new 
 window instead.
 <br>
 <br>
-Note: The reset link will be valid only for <b>{{ days }}</b> day{{ days|pluralize }}.
+<b>Note</b>: The reset link will be valid only for <b>{{ days }}</b> day{{ days|pluralize }}.
+<br>
+<b>PS.</b> Please open the link in a safe environment as you'll be required to set a new password.
 <br>
 <br>
 Sincerely,
