--- a/ipu/templates/account/forgot_password_email_body_text.html
+++ b/ipu/templates/account/forgot_password_email_body_text.html
@@ -12,6 +12,8 @@ window instead.
 
 Note: The reset link will be valid only for {{ days }} day{{ days|pluralize }}.
 
+PS. Please open the link in a safe environment as you'll be required to set a new password.
+
 
 Sincerely,
 
