--- a/ipu/templates/account/set_password.html
+++ b/ipu/templates/account/set_password.html
@@ -6,7 +6,7 @@
 	{% if successful %}
 		<div class="row">
 			<h3 class="center col s12 flow-text teal-text text-accent-4">Your password has been reset successfully!</h3>
-			<p class="center col s12 flow-text blue-text">Hope you don't forget it this time.</p>
+			<p class="center col s12 flow-text blue-text">We're still there if you happen to forget it again!</p>
 			<div class="col s12">
 				<a class="btn btn-waves-light col s8 offset-s2" style="width: 80%" href="{% url 'auth' %}">Login &nbsp;<i class="fa fa-sign-in fa-2x"></i></a>
 			</div>
