--- a/ipu/templates/account/auth.html
+++ b/ipu/templates/account/auth.html
@@ -8,6 +8,7 @@
 	<link type="text/css" rel="stylesheet" href="{% static 'account/auth.css' %}" />
 	<link type="text/css" rel="stylesheet" href="{% static 'common/css/font-awesome/css/font-awesome.min.css' %}" />
 <!--	<link type="text/css" rel="stylesheet" href="{% static 'materialize-blue.css' %}" /> -->
+<link rel="stylesheet" type="text/css" href="{% static 'sweetalert/dist/sweetalert.css' %}">
 {% endblock %}
 
 {% block content %}
@@ -175,6 +176,7 @@
 
 {% block scripts %}
 	<script type="text/javascript" src="{% static 'account/auth.js' %}"></script>
+	<script src="{% static 'sweetalert/dist/sweetalert.min.js' %}"></script>
 	<script>
 		$(document).ready(function() {
 			Auth.init();
