--- a/ipu/templates/account/base_home_layout.html
+++ b/ipu/templates/account/base_home_layout.html
@@ -8,7 +8,7 @@
             <link type="text/css" rel="stylesheet" href="{% static 'materialize-blue.css' %}" />
             <link type="text/css" rel="stylesheet" href="{% static 'account/css/base_home_layout.css'%}"  media="screen,projection"/>
             <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-			<meta name="robots" content="noindex," "nocache," "noimageindex," "noarchive," "nosnippet," "nofollow" />
+			<meta name="robots" content="noindex, nocache, noimageindex, noarchive, nosnippet, nofollow" />
             {% block head %}{% endblock %}
     </head>
 
@@ -290,11 +290,11 @@
 
 <!-- Floating Button containg info and reload btns -->
 		<div id="fixed-action-button">
-			<div class="fixed-action-btn">
-				<a class="btn-floating btn-large red darken-1"><i class="fa fa-plus"></i> </a>
+			<div class="fixed-action-btn click-to-toggle">
+				<a style="background-color: lightcoral !important" class="btn-floating btn-large"><i class="fa fa-plus"></i> </a>
 				<ul>
 					<li>
-						<a class="reload-btn btn-floating waves-effect waves-light teal lighten-1" style="transform: scaleX(0.4) scaleY(0.4) translateY(40px); opacity: 0;"><i class="fa fa-refresh"></i></a>
+						<a class="reload-btn btn-floating waves-effect waves-light teal lighten-3" style="transform: scaleX(0.4) scaleY(0.4) translateY(40px); opacity: 0;"><i class="fa fa-refresh"></i></a>
 					</li>
 					<li>
 						<a class="info-btn btn-floating waves-effect waves-light blue lighten-1" style="transform: scaleX(0.4) scaleY(0.4) translateY(40px); opacity: 0;"><i class="fa fa-info"></i></a>
