--- a/ipu/templates/company/association_requests.html
+++ b/ipu/templates/company/association_requests.html
@@ -1,6 +1,6 @@
 {% load staticfiles %}
 <style type="text/css">
-	#card-main
+	.req-card-main
 	{
 		background-color: #7d97ad;
 		height: 300px;
@@ -41,16 +41,18 @@
 <div class="container">
 	<div class="col s8 offset-s2 request-content">
 		{% for ass in associations %}
-			<div class="col s12 card-panel" id="card-main">
+			<div class="col s12 card-panel req-card-main">
 				<div class="card-content white-text center" id="content">
 					<span class="card-title" id="heading">Association Request</span>
 					<p> {{ ass.obj }} </p>
-					<p id="package"> Minimum-Package :{{ ass.obj.salary }} LPA</p>
+					<p id="package"> Programme: {{ ass.obj.programme }}</p>
+					<p id="package"> Streams: {{ ass.streams }}</p>
+					<p id="package"> Salary: {{ ass.obj.salary }} LPA (This can be changed later)</p>
 				</div>
 	
 				<div class="card-action yellow-text">
-					<a class="waves-effect waves-light btn" href=" {{ ass.url.session_url }} ">Accept</a>
-					<a class="waves-effect waves-light btn" href=" {{ ass.url.decline_url }} ">Decline</a>
+					<a class="waves-effect waves-light btn" href=" {% url 'createsession' %}?ass={{ ass.hashid }}">Accept</a>
+					<a class="waves-effect waves-light btn" href=" {% url 'decline' %}?ass={{ ass.hashid }}">Decline</a>
 				</div>
 	
 			</div>
