--- a/ipu/templates/recruitment/create_session.html
+++ b/ipu/templates/recruitment/create_session.html
@@ -1,11 +1,20 @@
 {% load staticfiles %}
 {% load material_form %}
-<form method='POST' action="{% url 'createsession' %}" id="create-session-form">
-	{% csrf_token %}
-	{% form form=session_creation_form %}{% endform %}
-	<div class="row">
-		<div class="col s6 offset-s2">
-			<button class="btn btn-waves" type="submit">Create Session</button>
-		</div>
+<div class="col s12 accept-req-card" style="border: 1px solid #1c262f">
+	<h5 style="color: lightcoral" class="center-align">Connecting with {{ other_party }}</h5>
+	<div class="col s12 right-align">
+		<a href="{% url 'decline' %}?ass={{ hashid }}" style="color: seagreen" class="btn-flat change-decision">Change Decision</a>
 	</div>
-</form>
+	<ul class="right-align col s12 blue-text text-accent-1">
+		<li><b>Programme:</b> {{ association.programme }}</li>
+		<li><b>Streams:</b> {{ streams }}</li>
+		<li><b>Salary:</b> {{ association.salary }} LPA (Changeable)</li>
+	</ul>
+	<form method='POST' action="{% url 'createsession' %}" id="create-session-form" class="col s12">
+		{% csrf_token %}
+		{% form form=session_creation_form %}{% endform %}
+		<div class="row">
+			<button class="btn btn-waves col s10 offset-s1 m8 offset-m2" type="submit">Create Session</button>
+		</div>
+	</form>
+</div>
