--- a/ipu/templates/recruitment/manage_session.html
+++ b/ipu/templates/recruitment/manage_session.html
@@ -87,7 +87,7 @@
 		<div class="col s12">
 			<div class="card deep-purple lighten-5">
 				<div class="card-content deep-purple-text">
-					<span class="card-title"><b>Enrolments</b></span>
+					<span class="card-title"><b>Enrollments</b></span>
 					{% with session.students.count as count %}
 						<p><b>{{ count }}</b> student{{ count | pluralize }} {{count|pluralize:"is,are"}} currently enrolled.</p>
 					{% endwith %}
